--- a/xuiframework/build.gradle
+++ b/xuiframework/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.0.1")
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-vector-drawable:28.0.0'
 }
 repositories {
     mavenCentral()
