--- a/xuiframework/build.gradle
+++ b/xuiframework/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
+    implementation "org.jetbrains.anko:anko:0.10.8"
 }
 repositories {
     mavenCentral()
