--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled = true
-    }
 }
 
 dependencies {
@@ -38,4 +35,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation project(path: ':xuiframework')
     implementation "org.jetbrains.anko:anko:0.10.8"
+    implementation "org.jetbrains.anko:anko-commons:0.10.8"
+    implementation 'com.android.support:design:28.0.0'
 }
