--- a/xuiframework/build.gradle
+++ b/xuiframework/build.gradle
@@ -8,7 +8,7 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
     implementation "org.jetbrains.anko:anko:0.10.8"
+    implementation 'com.akexorcist:localizationactivity:1.2.2'
 }
 repositories {
     mavenCentral()
