--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 apply plugin: 'kotlin-android-extensions'
 
 buildscript {
+    ext.kotlin_version = '1.3.50'
     ext.kotlin_version = '1.3.41'
     ext.kotlin_version = '1.3.31'
     repositories {
