--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Fri Sep 20 02:00:14 IRDT 2019
+android.enableJetifier=true
+android.useAndroidX=true
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
