--- a/xuiframework/build.gradle
+++ b/xuiframework/build.gradle
@@ -29,11 +29,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':persiandatepicker')
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     implementation('com.github.bumptech.glide:glide:4.6.1') {
         transitive = true
@@ -45,10 +45,11 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.0.1")
     implementation 'com.google.code.gson:gson:2.8.5'
 
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:support-vector-drawable:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.0'
     implementation "org.jetbrains.anko:anko:0.10.8"
     implementation 'com.akexorcist:localizationactivity:1.2.2'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 }
 repositories {
     mavenCentral()
