--- a/xuiframework/build.gradle
+++ b/xuiframework/build.gradle
@@ -27,7 +27,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(path: ':persiandatepicker')
+    implementation project(path: ':persianmaterialdatetimepicker')
 
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
