--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'com.akexorcist:localizationactivity:1.2.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
