--- a/xuiframework/build.gradle
+++ b/xuiframework/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -57,6 +60,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko:0.10.8"
     implementation 'com.akexorcist:localizationactivity:1.2.2'
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
+    testImplementation 'junit:junit:4.12'
 }
 repositories {
     mavenCentral()
