--- a/xuiframework-customviews/build.gradle
+++ b/xuiframework-customviews/build.gradle
@@ -48,4 +48,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
 }
