--- a/xuiframework-core/build.gradle
+++ b/xuiframework-core/build.gradle
@@ -43,4 +43,9 @@ dependencies {
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation 'androidx.core:core-ktx:1.0.2'
     testImplementation 'junit:junit:4.12'
+
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
+    implementation 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'
 }
